syntax = "proto3";


package auth;

// services
service UsersServices {
  rpc CreateUser(CreateUserDto) returns (User){}
  rpc FindAllUsers(Empty)returns (Users){}
  rpc FindOneUser(FindOneUserDto)returns(User) {}
  rpc UpdateUser(UpdateUserDto)returns(User){}
  rpc RemoveUser(FindOneUserDto)returns(User){}
  rpc QueryUsers(stream PaginationDto)returns(stream Users){}
}

// messages

// requests
message Empty {};

message CreateUserDto {
  string username = 1;
  string password = 2;
  int32 age = 3;
}

message FindOneUserDto {
  string id = 1;
}

message UpdateUserDto {
  string id = 1;
  SocialMedia socialMedia = 2;
}

message PaginationDto {
  int32 page = 1;
  int32 skip = 2;
}
// responses
message Users {
  repeated User users = 1;
}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  int32 age = 4;
  bool subscribed = 5;
  SocialMedia socialMedia = 6;
}

// models 
message SocialMedia {
  optional string twitterUri = 1;
  optional string fbUri = 2;
}

// ==> npx protoc --plugin=./node_modules/.bin/protoc-gen-ts-proto --ts_proto_out=./ --ts_proto_opt=nestJs=true ./proto/auth.proto


// npm install --save-dev ts-proto protobufjs
// npm install --save @grpc/grpc-js @grpc/proto-loader